# slack-lambdabot

./: shell.nix  slack-lambdabot.cabal
src/: Main.hs
