name:                slack-lambdabot
version:             0.1.0.0
synopsis:            Lambdabot for Slack
description:         Lambdabot for Slack
author:              Mark Andrus Roberts
maintainer:          markandrusroberts@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable slack-lambdabot
  main-is:             Main.hs
  other-modules:       Modules
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <4.10,
                       deepseq,
                       html-entities,
                       lambdabot-core,
                       lambdabot-haskell-plugins,
                       lambdabot-irc-plugins,
                       lambdabot-misc-plugins,
                       lambdabot-novelty-plugins,
                       lambdabot-reference-plugins,
                       lambdabot-social-plugins,
                       lambdabot-trusted,
                       lens,
                       parsec,
                       silently,
                       slack-api,
                       text,
                       transformers >=0.3,
                       utf8-string
  ghc-options:         -O2 -Wall -fno-warn-unused-do-bind -threaded
  default-language:    Haskell2010
